@@ -1,5 +1,4 @@
 {
-    "minimum-stability": "dev",
     "name": "horde/kronolith",
     "description": "Calendar and scheduling application",
     "type": "horde-application",
@@ -22,7 +21,7 @@
             "role": "lead"
         }
     ],
-    "time": "2022-03-30",
+    "time": "2022-10-08",
     "repositories": [
         {
             "type": "composer",
@@ -48,6 +47,7 @@
         "horde/http": "^3 || dev-FRAMEWORK_6_0",
         "horde/history": "^3 || dev-FRAMEWORK_6_0",
         "horde/icalendar": "^3 || dev-FRAMEWORK_6_0",
+        "horde/itip": "^3 || dev-FRAMEWORK_6_0",
         "horde/image": "^3 || dev-FRAMEWORK_6_0",
         "horde/lock": "^3 || dev-FRAMEWORK_6_0",
         "horde/logintasks": "^3 || dev-FRAMEWORK_6_0",
@@ -68,8 +68,7 @@
         "ext-json": "*",
         "ext-SimpleXML": "*"
     },
-    "require-dev": {},
-    "suggest": {
+    "require-dev": {
         "horde/nag": "^5 || dev-FRAMEWORK_6_0",
         "horde/timeobjects": "^3 || dev-FRAMEWORK_6_0",
         "horde/activesync": "^3 || dev-FRAMEWORK_6_0",
@@ -77,6 +76,15 @@
         "horde/db": "^3 || dev-FRAMEWORK_6_0",
         "horde/openxchange": "^2 || dev-FRAMEWORK_6_0",
         "horde/test": "^3 || dev-FRAMEWORK_6_0",
+        "pear/date_holidays": "*"
+    },
+    "suggest": {
+        "horde/nag": "^5 || dev-FRAMEWORK_6_0",
+        "horde/timeobjects": "^3 || dev-FRAMEWORK_6_0",
+        "horde/activesync": "^3 || dev-FRAMEWORK_6_0",
+        "horde/backup": "^2 || dev-FRAMEWORK_6_0",
+        "horde/db": "^3 || dev-FRAMEWORK_6_0",
+        "horde/openxchange": "^2 || dev-FRAMEWORK_6_0",
         "pear/date_holidays": "*",
         "ext-xmlwriter": "*"
     },
@@ -94,12 +102,17 @@
         }
     },
     "bin": [
-        "bin/kronolith-convert-sql-shares-to-sqlng",
         "bin/kronolith-agenda",
+        "bin/kronolith-convert-datatree-shares-to-sql",
+        "bin/kronolith-convert-sql-shares-to-sqlng",
+        "bin/kronolith-convert-to-utc",
         "bin/kronolith-import-icals",
         "bin/kronolith-import-openxchange",
-        "bin/kronolith-convert-datatree-shares-to-sql",
-        "bin/kronolith-import-squirrelmail-calendar",
-        "bin/kronolith-convert-to-utc"
-    ]
+        "bin/kronolith-import-squirrelmail-calendar"
+    ],
+    "config": {
+        "allow-plugins": {
+            "horde/horde-installer-plugin": true
+        }
+    }
 }
