@@ -46,12 +46,12 @@
   state:
     release: alpha
     api: alpha
-  date: 2022-03-30
+  date: 2022-10-08
   license:
     identifier: GPL-2.0
     uri: http://www.horde.org/licenses/gpl
-  notes: |+
-    
+  notes: |
+    [rla] PHP 8.1 compatibility improvements. Added modern serialization methods and tentative return types.
 5.0.0alpha5:
   api: 5.0.0alpha3
   state:
