@@ -22,7 +22,7 @@
   <email>chuck@horde.org</email>
   <active>no</active>
  </lead>
- <date>2022-03-30</date>
+ <date>2022-10-08</date>
  <version>
   <release>5.0.0alpha6</release>
   <api>5.0.0alpha1</api>
@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0-only</license>
  <notes>
-* 
+* [rla] PHP 8.1 compatibility improvements. Added modern serialization methods and tentative return types.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1383,137 +1383,6 @@
   </filelist>
  </phprelease>
  <changelog>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
   <release>
    <version>
     <release>0.0.1</release>
@@ -4268,16 +4137,16 @@
   <release>
    <version>
     <release>5.0.0alpha6</release>
-    <api>5.0.0alpha3</api>
+    <api>5.0.0alpha1</api>
    </version>
    <stability>
     <release>alpha</release>
     <api>alpha</api>
    </stability>
    <date>2022-03-30</date>
-   <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
+   <license uri="http://www.horde.org/licenses/gpl">GPL-2.0-only</license>
    <notes>
-* 
+* [rla] PHP 8.1 compatibility improvements. Added modern serialization methods and tentative return types.
    </notes>
   </release>
   <release>
